- [Feature] Connecting to Windows Azure Blob Storage (Azure) (#3938)
- [Bugfix] Support for S3Fox directory placeholders (S3)
- [Bugfix] Support for Google Storage Console directory placeholders (S3)
- [Bugfix] Support for s3sync.rb directory placeholders (#5374) (S3)
- [Bugfix] Connect through HTTP/HTTPS proxy (#5379) (Google Docs)

3.7 (Oct-21-2010) [http://trac.cyberduck.ch/milestone/3.7]
- [Feature] Option to upload with temporary name and rename file after transfer is complete (#4165)
- [Feature] Copy files between browser windows with different sessions (#21)
- [Feature] Option to display hidden files in upload prompt (#1243)
- [Feature] Import Transmit favorites (#3073)
- [Feature] Copy and open multiple URLs (#5135)
- [Feature] Support for PuTTY private key format (SFTP) (#5322)
- [Feature] Duplicate Bookmarks using drag and drop with option key
- [Feature] Display only affected files in synchronization preview (#5226)
- [Feature] Change update source to snapshot builds in Preferences
- [Bugfix] Files pasted upload to parent directory (#5155)
- [Bugfix] Uploading .xlsx or .docx documents fails with permission error (#5169) (Google Docs)
- [Bugfix] Reading and writing ACLs (Google Docs)
- [Bugfix] Interoperability with cPanel Web Disk (WebDAV) (#5188)
- [Bugfix] Downloading previous versions of file (S3) (#5217)
- [Bugfix] Skip directories with matching timestamp from synchronization (#557)
- [Bugfix] Not using proper storage URL (#5216) (Swift OpenStack)
- [Bugfix] Proxy connection failure (#5239) (S3)
- [Bugfix] Crash importing Transmit bookmarks for some users (#5351)

3.6.1 (Sep-07-2010) [http://trac.cyberduck.ch/milestone/3.6.1]
- [Bugfix] Permissions reset (FTP) (#5132)
- [Bugfix] Failure reading symbolic link target for directories (SFTP) (#5141)

3.6 (Sep-06-2010) [http://trac.cyberduck.ch/milestone/3.6]
- [Feature] Connecting to Google Storage (Google Storage)
- [Feature] Edit Access Control List (ACL) (#3191) (S3, Google Storage, Google Docs)