@@ -40,6 +40,25 @@
 </p>
 
 <strong><a href=
+        "http://trac.cyberduck.ch/milestone/4.0">Version 4.0</a></strong><br/>
+
+<ul>
+    <li>[Feature] Version for Microsoft Windows XP, Windows Vista & Windows 7.</li>
+    <li>[Feature] Connecting to Windows Azure Blob Storage (Azure) (<a
+            href="http://trac.cyberduck.ch/ticket/3938">#3938</a>)
+    </li>
+    <li>[Bugfix] Proxy support for Google Docs connections (<a
+            href="http://trac.cyberduck.ch/ticket/5379">#5379</a>)
+    </li>
+    <li>[Bugfix] Support for S3Fox directory placeholders (S3)</li>
+    <li>[Bugfix] Support for Google Storage Console directory placeholders (S3)</li>
+    <li>[Bugfix] Support for s3sync.rb directory placeholders (<a
+            href="http://trac.cyberduck.ch/ticket/5374">#5374</a>) (S3)
+    </li>
+    <li>[Bugfix] Changing storage class fails (S3)</li>
+</ul>
+
+<strong><a href=
         "http://trac.cyberduck.ch/milestone/3.7">Version 3.7</a></strong><br/>
 
 <ul>
